--- a/styles/UI/_footer.scss
+++ b/styles/UI/_footer.scss
@@ -6,8 +6,8 @@
     display: grid;
     grid-template-columns: repeat(4, auto);
     justify-content: space-between;
-    padding-top: 120px;
-    padding-bottom: 84px;
+    padding-top: 90px;
+    padding-bottom: 67px;
   }
 
   &__col {
@@ -16,12 +16,12 @@
     align-items: flex-start;
     justify-content: start;
     &--split {
-      max-width: 320px;
+      max-width: 226px;
       display: grid;
       grid-template-rows: 1fr 1fr;
       grid-template-columns: 1fr 1fr;
-      column-gap: 129px;
-      row-gap: 69px;
+      column-gap: 90px;
+      row-gap: 51px;
     }
   }
 
@@ -34,16 +34,17 @@
     flex-direction: column;
     align-items: flex-start;
     justify-content: start;
-    gap: 27px;
+    gap: 20px;
   }
 
   &__nav-link {
     color: $white;
     font-family: $mainFont;
-    font-size: 22px;
+    font-size: 16.5px;
     font-style: normal;
     font-weight: 700;
-    line-height: 120%; /* 26.4px */
+    line-height: 120%; /* 19.8px */
+    text-transform: capitalize;
     @include dash($white);
   }
 
@@ -58,11 +59,12 @@
     gap: 12px;
     color: $white;
     font-family: $mainFont;
-    font-size: 22px;
+    font-size: 16.5px;
     font-style: normal;
     font-weight: 700;
-    line-height: 120%; /* 26.4px */
+    line-height: 120%; /* 19.8px */
     text-transform: capitalize;
+
     cursor: pointer;
     &:hover {
       .footer__link-icon {
@@ -73,6 +75,10 @@
 
   &__link-icon {
     transition: $defaultTransitionTime;
+    svg {
+      width: 12px;
+      height: 12px;
+    }
   }
 
   &__copyrights-link {
@@ -84,18 +90,18 @@
     grid-column-end: 3;
     color: #d4d4d4;
     font-family: $mainFont;
-    font-size: 22px;
+    font-size: 16.5px;
     font-style: normal;
     font-weight: 700;
-    line-height: 120%;
+    line-height: 120%; /* 19.8px */
     text-transform: capitalize;
   }
 
   &__row {
-    margin-bottom: 37px;
+    margin-bottom: 19px;
     display: flex;
     align-items: center;
-    gap: 20px;
+    gap: 14px;
   }
 
   &__row-heading {
@@ -103,20 +109,20 @@
     leading-trim: both;
     text-edge: cap;
     font-family: $mainFont;
-    font-size: 22px;
+    font-size: 16.5px;
     font-style: normal;
     font-weight: 400;
-    line-height: 100%; /* 22px */
-    letter-spacing: -0.44px;
+    line-height: 100%; /* 16.5px */
+    letter-spacing: -0.33px;
   }
 
   &__row-text {
     color: $white;
     font-family: $mainFont;
-    font-size: 22px;
+    font-size: 16.5px;
     font-style: normal;
     font-weight: 700;
-    line-height: 120%; /* 26.4px */
+    line-height: 120%; /* 19.8px */
   }
 
   &__copy-group {
@@ -130,9 +136,9 @@
   &__copy-link {
     color: #707070;
     font-family: $mainFont;
-    font-size: 14px;
+    font-size: 10.5px;
     font-style: normal;
     font-weight: 400;
-    line-height: 120%; /* 16.8px */
+    line-height: 120%; /* 12.6px */
   }
 }
