--- a/styles/UI/_btn.scss
+++ b/styles/UI/_btn.scss
@@ -2,8 +2,8 @@
   position: relative;
   display: inline-block;
   width: fit-content;
-  padding: 24px 109.5px;
-  border-radius: 34px;
+  padding: 17px 62px;
+  border-radius: 25.5px;
   background: $blue;
   outline: 1px solid transparent;
   transition: $defaultTransitionTime cubic-bezier(0.215, 0.61, 0.355, 1);
@@ -50,11 +50,12 @@
     leading-trim: both;
     text-edge: cap;
     font-family: $mainFont;
-    font-size: 22px;
+    font-size: 16.5px;
     font-style: normal;
     font-weight: 400;
-    line-height: 100%;
-    letter-spacing: -0.44px;
+    line-height: 100%; /* 16.5px */
+    letter-spacing: -0.33px;
+    text-transform: uppercase;
     transition: $defaultTransitionTime + 0.6s;
     text-transform: uppercase;
   }
@@ -86,11 +87,6 @@
     background-color: transparent;
     .btn__label {
       color: $white;
-      font-family: Noah;
-      font-size: 22px;
-      font-style: normal;
-      font-weight: 400;
-      line-height: 100%; /* 22px */
     }
     .btn__icon {
       path {
