--- a/styles/UI/_mainLink.scss
+++ b/styles/UI/_mainLink.scss
@@ -2,16 +2,16 @@
   position: relative;
   display: flex;
   align-items: center;
-  gap: 16px;
+  gap: 12px;
   color: $black;
   leading-trim: both;
   text-edge: cap;
   font-family: $mainFont;
-  font-size: 20px;
+  font-size: 15px;
   font-style: normal;
   font-weight: 400;
-  line-height: 100%;
-  letter-spacing: -0.4px;
+  line-height: 100%; /* 15px */
+  letter-spacing: -0.3px;
   transition: $defaultTransitionTime cubic-bezier(0.62, 0.21, 0.905, 0.36);
   overflow: hidden;
   padding: 4px;
@@ -47,8 +47,12 @@
     transform: scale(100%);
   }
   &__icon {
-    width: 24px;
-    height: 24px;
+    width: 18px;
+    height: 18px;
+    svg {
+      width: 18px;
+      height: 18px;
+    }
     transition: $defaultTransitionTime;
     path {
       transition: $defaultTransitionTime;
