--- a/styles/_styles.scss
+++ b/styles/_styles.scss
@@ -1,20 +1,21 @@
 .slogan {
-  max-width: 1255px;
+  max-width: 942px;
   color: $black;
   font-family: $mainFont;
-  font-size: 56px;
+  font-size: 42px;
   font-style: normal;
   font-weight: 400;
-  line-height: 110%;
-  letter-spacing: -1.12px;
+  line-height: 110%; /* 46.2px */
+  letter-spacing: -0.84px;
 }
 .promo-section {
+  margin-bottom: 0;
   &__wrapper {
     flex-direction: column;
     align-items: flex-end;
     justify-content: center;
-    padding-top: 90px;
-    padding-bottom: 160px;
+    padding-top: 67.5px;
+    padding-bottom: 122px;
   }
 }
 
@@ -32,8 +33,7 @@
   }
 
   &__sidebar {
-    width: 100%;
-    height: fit-content;
+    height: 100%;
     position: sticky;
     left: 0;
     top: 0;
@@ -42,8 +42,7 @@
     align-items: flex-start;
     justify-content: start;
     gap: 48px;
-    padding-top: 40px;
-    padding-right: 40px;
+    padding: 32px;
     border-right: 1.2px solid $lt-grey;
   }
 }
@@ -72,7 +71,7 @@
   width: 100%;
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: 672px;
+  grid-template-rows: 504px;
   &__row {
     width: 100%;
     display: grid;
@@ -96,7 +95,7 @@
     flex-direction: column;
     align-items: flex-start;
     justify-content: start;
-    padding: 40px;
+    padding: 30px;
     &:first-child {
       border-right: 1.2px solid $lt-grey;
     }
@@ -104,7 +103,7 @@
 
   &__col-header {
     width: 100%;
-    margin-bottom: 32px;
+    margin-bottom: 24px;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -115,11 +114,17 @@
     leading-trim: both;
     text-edge: cap;
     font-family: $mainFont;
-    font-size: 36px;
+    font-size: 27px;
     font-style: normal;
     font-weight: 700;
-    line-height: 100%;
-    letter-spacing: -0.36px;
+    line-height: 100%; /* 27px */
+    letter-spacing: -0.27px;
+  }
+  &__col-link {
+    svg {
+      width: 15.75px;
+      height: 15.75px;
+    }
   }
 
   &__col-body {
@@ -133,11 +138,11 @@
   &__col-text {
     color: $black;
     font-family: $mainFont;
-    font-size: 22px;
+    font-size: 16.5px;
     font-style: normal;
     font-weight: 400;
-    line-height: 110%;
-    letter-spacing: -0.66px;
+    line-height: 110%; /* 18.15px */
+    letter-spacing: -0.495px;
   }
 
   &__col-footer {
@@ -158,17 +163,17 @@
     leading-trim: both;
     text-edge: cap;
     font-family: $mainFont;
-    font-size: 22px;
+    font-size: 16.5px;
     font-style: normal;
     font-weight: 400;
-    line-height: 100%; /* 22px */
-    letter-spacing: -0.44px;
+    line-height: 100%; /* 16.5px */
+    letter-spacing: -0.33px;
     text-transform: uppercase;
   }
 
   &__col-img {
     width: 100%;
-    height: 590px;
+    height: 442px;
     object-fit: cover;
     object-position: center;
   }
@@ -219,7 +224,7 @@
     border-right: none;
   }
   &__slogan {
-    margin-bottom: 108px;
+    margin-bottom: 83px;
   }
 
   &__body {
@@ -245,17 +250,17 @@
     &:nth-child(even) {
       margin-left: auto;
       border-right: none;
-      padding-left: 40px;
-      border-left: 1.2px solid $lt-grey;
+      padding-left: 30px;
+      border-left: 0.75px solid $lt-grey;
     }
   }
 
   &__item-header {
     width: 100%;
-    padding-top: 45px;
-    padding-right: 40px;
-    padding-bottom: 32px;
-    border-bottom: 1.2px solid $lt-grey;
+    padding-top: 33.75px;
+    padding-right: 30px;
+    padding-bottom: 24px;
+    border-bottom: 0.75px solid $lt-grey;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -267,50 +272,59 @@
     leading-trim: both;
     text-edge: cap;
     font-family: $mainFont;
-    font-size: 36px;
+    font-size: 27px;
     font-style: normal;
     font-weight: 700;
-    line-height: 100%; /* 36px */
-    letter-spacing: -0.36px;
+    line-height: 100%; /* 27px */
+    letter-spacing: -0.27px;
+  }
+  &__item-link {
+    svg {
+      width: 15.75px;
+      height: 15.75px;
+    }
   }
 
   &__item-body {
     width: 100%;
-    padding-top: 32px;
+    padding-top: 24px;
   }
 
   &__item-text {
-    max-width: 424px;
+    max-width: 318px;
     color: $black;
     font-family: $mainFont;
-    font-size: 22px;
+    font-size: 16.5px;
     font-style: normal;
     font-weight: 400;
-    line-height: 110%; /* 24.2px */
-    letter-spacing: -0.66px;
+    line-height: 110%; /* 18.15px */
+    letter-spacing: -0.495px;
   }
 }
 
 .result-section {
-  padding-top: 160px;
-  padding-bottom: 97px;
+  padding-top: 120px;
+  padding-bottom: 72px;
   background-color: $black;
 
   &__heading {
-    margin-left: 465px;
-    margin-bottom: 40px;
+    width: 100%;
+    max-width: 945px;
+    margin-left: auto;
+    margin-bottom: 30px;
     color: $white;
     font-family: $mainFont;
-    font-size: 56px;
+    font-size: 42px;
     font-style: normal;
     font-weight: 700;
-    line-height: 120%;
+    line-height: 120%; /* 50.4px */
     text-transform: uppercase;
   }
 
   &__content {
-    @extend .offers-section__content;
-    grid-template-columns: auto 72.7%;
+    display: flex;
+    align-items: flex-start;
+    justify-content: start;
     border-top: 1.2px solid #474747;
   }
 
@@ -325,12 +339,12 @@
   grid-template-columns: repeat(3, calc(100% / 3));
   &__cell {
     width: 100%;
-    height: 407px;
+    height: 305px;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     justify-content: space-between;
-    padding: 40px;
+    padding: 30px;
     border-left: 1.2px solid #474747;
     border-bottom: 1.2px solid #474747;
     &:nth-child(3n) {
@@ -341,10 +355,10 @@
   &__cell-text {
     color: $white;
     font-family: $mainFont;
-    font-size: 22px;
+    font-size: 16.5px;
     font-style: normal;
     font-weight: 400;
-    line-height: 110%;
+    line-height: 110%; /* 18.15px */
   }
 
   &__cell-count {
@@ -352,10 +366,10 @@
     leading-trim: both;
     text-edge: cap;
     font-family: $mainFont;
-    font-size: 96px;
+    font-size: 72px;
     font-style: normal;
     font-weight: 700;
-    line-height: 100%; /* 96px */
+    line-height: 100%; /* 72px */
   }
 }
 
@@ -364,7 +378,7 @@
     width: 100%;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    gap: 20px;
+    gap: 193px;
   }
 
   &__col {
@@ -376,14 +390,15 @@
   }
 
   &__heading {
-    margin-bottom: 74px;
+    text-transform: none;
+    margin-bottom: 56px;
     color: $black;
     font-family: $mainFont;
-    font-size: 56px;
+    font-size: 42px;
     font-style: normal;
     font-weight: 700;
-    line-height: 120%; /* 67.2px */
-    letter-spacing: -0.56px;
+    line-height: 120%; /* 50.4px */
+    letter-spacing: -0.42px;
   }
 
   &__contacts-group {
@@ -394,10 +409,10 @@
 .tel-link {
   color: $black;
   font-family: $mainFont;
-  font-size: 22px;
+  font-size: 16.5px;
   font-style: normal;
   font-weight: 700;
-  line-height: 110%;
+  line-height: 110%; /* 18.15px */
 }
 .mail-link {
   @extend .tel-link;
@@ -405,8 +420,8 @@
 .contacts-group {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  column-gap: 93px;
-  row-gap: 46px;
+  column-gap: 115px;
+  row-gap: 30px;
 }
 .link {
   display: flex;
@@ -414,10 +429,10 @@
   gap: 13.36px;
   color: $blue;
   font-family: $mainFont;
-  font-size: 22px;
+  font-size: 16.5px;
   font-style: normal;
   font-weight: 700;
-  line-height: 50%; /* 24.2px */
+  line-height: 110%; /* 18.15px */
   &__icon {
     width: 21px;
     height: 16px;
@@ -434,25 +449,25 @@
     flex-direction: column;
     align-items: flex-start;
     justify-content: start;
-    gap: 20px;
+    gap: 15px;
   }
 
   &__col-heading {
     color: #707070;
     font-family: $mainFont;
-    font-size: 22px;
+    font-size: 16.5px;
     font-style: normal;
     font-weight: 400;
-    line-height: 110%; /* 24.2px */
+    line-height: 110%; /* 18.15px */
   }
 
   &__col-link {
     color: $black;
     font-family: $mainFont;
-    font-size: 22px;
+    font-size: 16.5px;
     font-style: normal;
     font-weight: 400;
-    line-height: 110%; /* 24.2px */
+    line-height: 110%; /* 18.15px */
   }
 }
 
@@ -462,23 +477,23 @@
   flex-direction: column;
   align-items: flex-start;
   justify-content: start;
-  gap: 90px;
+  gap: 45px;
   &__group {
     width: 100%;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     justify-content: start;
-    gap: 20px;
+    gap: 15px;
   }
 
   &__heading {
     color: $black;
     font-family: $mainFont;
-    font-size: 36px;
+    font-size: 27px;
     font-style: normal;
     font-weight: 700;
-    line-height: 110%;
+    line-height: 110%; /* 29.7px */
   }
 
   &__row {
@@ -488,25 +503,25 @@
 
   &__row--split {
     grid-template-columns: repeat(2, 1fr);
-    gap: 23px;
+    gap: 16px;
   }
 
   &__input {
     width: 100%;
-    padding: 20px 32px;
-    border-radius: 34px;
-    border: 1px solid $black;
+    padding: 15px 24px;
+    border-radius: 25.5px;
+    border: 0.7px solid $black;
     font-family: $mainFont;
 
     color: $black;
-    font-size: 22px;
+    font-size: 16.5px;
     font-style: normal;
     font-weight: 700;
-    line-height: 110%; /* 24.2px */
+    line-height: 110%; /* 18.15px */
     transition: $defaultTransitionTime;
     &:focus {
       outline: none;
-      border: 1px solid $blue;
+      border: 0.7px solid $blue;
     }
     &::placeholder {
       color: $lt-grey;
@@ -551,7 +566,7 @@
 
   &__radio {
     width: 100%;
-    padding: 19px 35px 22px;
+    padding: 15px;
     border-bottom: 1px solid $black;
     border-top: 1px solid $black;
     border-left: 1px solid $black;
@@ -560,25 +575,24 @@
     justify-content: center;
     color: $black;
     font-family: $mainFont;
-    font-size: 22px;
+    font-size: 16.5px;
     font-style: normal;
     font-weight: 400;
-    transition: $defaultTransitionTime;
-    line-height: 110%; /* 24.2px */
+    line-height: 110%; /* 18.15px */
   }
 
   &__textarea {
     width: 100%;
     height: 220px;
     resize: none;
-    padding: 36px;
+    padding: 27px;
     border-radius: 34px;
     border: 1px solid $black;
     font-family: $mainFont;
-    font-size: 22px;
+    font-size: 16.5px;
     font-style: normal;
     font-weight: 700;
-    line-height: 110%; /* 24.2px */
+    line-height: 110%; /* 18.15px */
     color: $black;
     &:focus {
       outline: none;
@@ -594,32 +608,23 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    gap: 36px;
+    gap: 27px;
   }
 
   &__btn {
-    padding: 25px;
+    padding: 18px;
     width: 100%;
     justify-content: center;
+    text-align: center;
     cursor: pointer;
   }
 
   &__subtext {
     color: #8e8e8e;
     font-family: $mainFont;
-    font-size: 22px;
+    font-size: 16.5px;
     font-style: normal;
     font-weight: 400;
-    line-height: 110%;
+    line-height: 110%; /* 18.15px */
   }
-}
-.request-section {
-  &__form {
-  }
-}
-.btn {
-  &__icon {
-  }
-}
-.btn--icon {
 }
