pixel perfect main

--- a/styles/UI/_btn.scss
+++ b/styles/UI/_btn.scss
@@ -2,7 +2,7 @@
   position: relative;
   display: inline-block;
   width: fit-content;
-  padding: 17px 62px;
+  padding: 15px 62px;
   border-radius: 25.5px;
   background: $blue;
   outline: 1px solid transparent;
@@ -73,6 +73,7 @@
   &--icon {
     display: flex;
     align-items: center;
+    justify-content: center;
     gap: 20px;
     position: relative;
     z-index: 4;
