--- a/styles/UI/_footer.scss
+++ b/styles/UI/_footer.scss
@@ -7,10 +7,11 @@
     grid-template-columns: repeat(4, auto);
     justify-content: space-between;
     padding-top: 90px;
-    padding-bottom: 67px;
+    padding-bottom: 63px;
   }
 
   &__col {
+    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -126,6 +127,7 @@
   }
 
   &__copy-group {
+    margin-top: 139px;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -140,5 +142,8 @@
     font-style: normal;
     font-weight: 400;
     line-height: 120%; /* 12.6px */
+  }
+  &__btn {
+    margin-top: 53.75px;
   }
 }
