--- a/styles/_styles.scss
+++ b/styles/_styles.scss
@@ -29,7 +29,7 @@
   &__content {
     width: 100%;
     display: grid;
-    grid-template-columns: 26.3% 73.7%;
+    grid-template-columns: 25.5% 73.7%;
   }
 
   &__sidebar {
@@ -41,9 +41,13 @@
     flex-direction: column;
     align-items: flex-start;
     justify-content: start;
-    gap: 48px;
-    padding: 32px;
+    gap: 35px;
+    padding: 28px;
+    padding-left: 0;
     border-right: 1.2px solid $lt-grey;
+  }
+  &__btn {
+    width: 100%;
   }
 }
 .page-list {
@@ -71,7 +75,7 @@
   width: 100%;
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: 504px;
+  grid-template-rows: 509px;
   &__row {
     width: 100%;
     display: grid;
@@ -95,7 +99,7 @@
     flex-direction: column;
     align-items: flex-start;
     justify-content: start;
-    padding: 30px;
+    padding: 28px;
     &:first-child {
       border-right: 1.2px solid $lt-grey;
     }
@@ -103,7 +107,7 @@
 
   &__col-header {
     width: 100%;
-    margin-bottom: 24px;
+    margin-bottom: 18px;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -136,6 +140,7 @@
   }
 
   &__col-text {
+    max-width: 313px;
     color: $black;
     font-family: $mainFont;
     font-size: 16.5px;
@@ -180,7 +185,7 @@
 }
 .player {
   width: 100%;
-  height: 80vh;
+  height: 86vh;
   position: relative;
   &__toggle-btn {
     position: absolute;
@@ -221,20 +226,25 @@
 
   &__sidebar {
     @extend .project-section__sidebar;
+    padding-top: 33px;
     border-right: none;
   }
   &__slogan {
-    margin-bottom: 83px;
+    margin-bottom: 77px;
   }
 
   &__body {
     width: 100%;
-    padding: 40px;
+    padding: 25px;
+    padding-top: 33px;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     justify-content: start;
     border-left: 1.2px solid $lt-grey;
+  }
+  &__btn {
+    width: 100%;
   }
 }
 
@@ -252,6 +262,14 @@
       border-right: none;
       padding-left: 30px;
       border-left: 0.75px solid $lt-grey;
+      .offers-list__item-header {
+        // padding-top: 21px;
+        // padding-bottom: 18px;
+        padding-right: 0;
+      }
+      .offers-list__item-body {
+        // padding-top: 20px;
+      }
     }
   }
 
@@ -287,7 +305,7 @@
 
   &__item-body {
     width: 100%;
-    padding-top: 24px;
+    padding-top: 20px;
   }
 
   &__item-text {
@@ -309,7 +327,7 @@
 
   &__heading {
     width: 100%;
-    max-width: 945px;
+    max-width: 907px;
     margin-left: auto;
     margin-bottom: 30px;
     color: $white;
@@ -330,15 +348,21 @@
 
   &__sidebar {
     @extend .offers-section__sidebar;
+    padding-top: 29px;
+    padding-right: 29px;
+  }
+  &__btn {
+    padding: 15px 55px;
   }
 }
 
 .table {
   width: 100%;
   display: grid;
-  grid-template-columns: repeat(3, calc(100% / 3));
+  grid-template-columns: repeat(3, 1fr);
   &__cell {
-    width: 100%;
+    width: 100vw;
+    max-width: 312.75px;
     height: 305px;
     display: flex;
     flex-direction: column;
@@ -353,6 +377,7 @@
   }
 
   &__cell-text {
+    max-width: 217px;
     color: $white;
     font-family: $mainFont;
     font-size: 16.5px;
@@ -378,7 +403,7 @@
     width: 100%;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    gap: 193px;
+    gap: 14px;
   }
 
   &__col {
@@ -402,7 +427,11 @@
   }
 
   &__contacts-group {
-    margin-bottom: 437px;
+    margin-bottom: 332px;
+  }
+
+  &__form {
+    margin-top: 10px;
   }
 }
 
@@ -420,7 +449,7 @@
 .contacts-group {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  column-gap: 115px;
+  column-gap: 71px;
   row-gap: 30px;
 }
 .link {
@@ -444,6 +473,7 @@
 }
 .info-group {
   @extend .contacts-group;
+  column-gap: 96px;
   &__col {
     display: flex;
     flex-direction: column;
@@ -477,14 +507,17 @@
   flex-direction: column;
   align-items: flex-start;
   justify-content: start;
-  gap: 45px;
   &__group {
     width: 100%;
+    margin-bottom: 64px;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     justify-content: start;
     gap: 15px;
+    &--last {
+      margin-bottom: 48px;
+    }
   }
 
   &__heading {
@@ -508,7 +541,7 @@
 
   &__input {
     width: 100%;
-    padding: 15px 24px;
+    padding: 14px 24px;
     border-radius: 25.5px;
     border: 0.7px solid $black;
     font-family: $mainFont;
@@ -583,7 +616,7 @@
 
   &__textarea {
     width: 100%;
-    height: 220px;
+    height: 167px;
     resize: none;
     padding: 27px;
     border-radius: 34px;
@@ -612,9 +645,9 @@
   }
 
   &__btn {
-    padding: 18px;
-    width: 100%;
-    justify-content: center;
+    flex-shrink: 0;
+    padding: 18px 55px;
+    width: fit-content;
     text-align: center;
     cursor: pointer;
   }
