--- a/styles/_vars.scss
+++ b/styles/_vars.scss
@@ -5,6 +5,7 @@ $wrapperWidth: 1294px;
 $black: #151515;
 $white: #fff;
 $blue: #0047ff;
+$red: #ff5151;
 $d-grey: #8e8e8e;
 $grey: #e9e9e9;
 $lt-grey: #d4d4d4;
