--- a/styles/index.scss
+++ b/styles/index.scss
@@ -15,5 +15,7 @@
 @import './UI/btn';
 @import './UI/hgroup';
 @import './UI/footer';
+@import './UI/overlay';
+@import './UI/popup';
 
 @import './styles';
