added popup background

--- a/styles/_styles.scss
+++ b/styles/_styles.scss
@@ -361,7 +361,7 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   &__cell {
-    width: 100vw;
+    width: 100%;
     max-width: 312.75px;
     height: 305px;
     display: flex;
